// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroup should render tag with color prop 1`] = `
<div>
  <span
    class="ucee-tag ucee-tag--primary"
    style="background-color: rgb(215, 139, 222); color: rgb(230, 22, 11);"
  />
</div>
`;

exports[`RadioGroup should render tag with mark prop 1`] = `
<div>
  <span
    class="ucee-tag ucee-tag--primary ucee-tag--mark"
  />
</div>
`;

exports[`RadioGroup should render tag with plain prop 1`] = `
<div>
  <span
    class="ucee-tag ucee-tag--primary ucee-tag--plain"
    style="background-color: white; color: rgb(25, 250, 215);"
  />
</div>
`;
